--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "latest",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "latest",
